--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   },
   "homepage": "https://github.com/samuelrms/nodejs-typescript-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
