--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "no-var": "off"
   }
 }
