--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
@@ -30,6 +31,7 @@
   },
   "homepage": "https://github.com/samuelrms/nodejs-typescript-api#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
@@ -47,6 +49,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
