--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "no-undef": "off",
-    "no-var": "off"
+    "no-var": "off",
+    "@typescript-eslint/ban-types": "off"
   }
 }
