--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/samuelrms/nodejs-typescript-api#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
@@ -51,6 +52,7 @@
     "@overnightjs/core": "^1.7.6",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
