--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "no-undef": "off",
     "no-var": "off",
-    "@typescript-eslint/ban-types": "off"
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
