--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
-    "start:dev": "ts-node-dev src/index.ts",
+    "start:dev": "nodemon --exec ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
@@ -54,8 +55,9 @@
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.1.1"
   }
 }
