--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/nock": "^11.1.0",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
+    "nock": "^13.3.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
