--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "nodemon --exec ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "yarn test:unit && yarn test:functional",
     "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
